[gd_scene load_steps=17 format=3 uid="uid://borg78fw15wgi"]

[ext_resource type="Script" path="res://main.gd" id="1_q42w3"]
[ext_resource type="PackedScene" uid="uid://ijulcvbsdbgi" path="res://nave.tscn" id="2_7a5wv"]
[ext_resource type="PackedScene" uid="uid://b8os2ktw84au" path="res://fondo.tscn" id="2_78ims"]
[ext_resource type="AudioStream" uid="uid://b3dmhokenuk4" path="res://Assets/Gameplay Loop.ogg" id="3_al6qi"]
[ext_resource type="Script" path="res://spawn_1.gd" id="4_1lqow"]
[ext_resource type="Script" path="res://spawn_pwr.gd" id="5_2mhue"]
[ext_resource type="PackedScene" uid="uid://b28eeq07f1b74" path="res://node_timer.tscn" id="6_efyyj"]
[ext_resource type="PackedScene" uid="uid://cx2s2wdi80ifk" path="res://Scenes/pausa.tscn" id="7_ai5my"]
[ext_resource type="PackedScene" uid="uid://blle74teooffg" path="res://score.tscn" id="7_ro43b"]
[ext_resource type="PackedScene" uid="uid://by4j0odcejtkf" path="res://Scenes/lives.tscn" id="8_mj3rr"]
[ext_resource type="PackedScene" uid="uid://c3xmqkb761n43" path="res://transition.tscn" id="11_les6x"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8nas1"]
a = Vector2(1, 648)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_g4yly"]
a = Vector2(1151, 10)
b = Vector2(1151, 651)

[sub_resource type="Animation" id="Animation_tro12"]
resource_name = "Move"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, -52), Vector2(1000, -52)]
}

[sub_resource type="Animation" id="Animation_ssl5n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gaia1"]
_data = {
"Move": SubResource("Animation_tro12"),
"RESET": SubResource("Animation_ssl5n")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_q42w3")

[node name="Pared 1" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared 1"]
shape = SubResource("SegmentShape2D_8nas1")

[node name="Pared 2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared 2"]
shape = SubResource("SegmentShape2D_g4yly")

[node name="Nave" parent="." instance=ExtResource("2_7a5wv")]

[node name="Fondo" parent="." instance=ExtResource("2_78ims")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_al6qi")
volume_db = 6.0
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Spawn_Pwr" type="Marker2D" parent="."]
position = Vector2(696, -80)
script = ExtResource("5_2mhue")

[node name="Spawn_1" type="Marker2D" parent="."]
position = Vector2(0, -32)
script = ExtResource("4_1lqow")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spawn_1"]
libraries = {
"": SubResource("AnimationLibrary_gaia1")
}
autoplay = "Move"

[node name="NodeTimer" parent="." instance=ExtResource("6_efyyj")]

[node name="Score" parent="." instance=ExtResource("7_ro43b")]

[node name="Pausa" parent="." instance=ExtResource("7_ai5my")]
z_index = 2

[node name="Lives" parent="." instance=ExtResource("8_mj3rr")]
z_index = 1
position = Vector2(-12, -50)

[node name="TransitionControl" parent="." instance=ExtResource("11_les6x")]
visible = false
z_index = 5
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -8.0
offset_top = -8.0
offset_right = 1168.0
offset_bottom = 664.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="jugar" from="Pausa" to="." method="_on_pausa_jugar"]
[connection signal="rejugar" from="Pausa" to="." method="_on_pausa_rejugar"]
[connection signal="salir" from="Pausa" to="." method="_on_pausa_salir"]
